Fix: Keep draft navigation visible and simplify bottom area (#129)

--- a/src/app/shared/help-dialog/help-dialog.component.scss
+++ b/src/app/shared/help-dialog/help-dialog.component.scss
@@ -80,3 +80,8 @@
   width: 16px;
   height: 16px;
 }
+
+.copyright {
+  margin-top: 0;
+  margin-bottom: 0;
+}
